--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,11 @@ description = "Talk to your PDF"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiosqlite>=0.21.0",
     "fastapi>=0.124.0",
+    "pydantic-settings>=2.12.0",
     "sqlalchemy>=2.0.45",
+    "uvicorn[standard]>=0.38.0",
 ]
 
 
