--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiosqlite>=0.21.0",
+    "email-validator>=2.3.0",
     "fastapi>=0.124.0",
+    "passlib>=1.7.4",
     "pydantic-settings>=2.12.0",
     "sqlalchemy>=2.0.45",
     "uvicorn[standard]>=0.38.0",
