--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "fastapi>=0.124.0",
     "passlib>=1.7.4",
     "pydantic-settings>=2.12.0",
+    "python-jose[cryptography]>=3.5.0",
     "sqlalchemy>=2.0.45",
     "uvicorn[standard]>=0.38.0",
 ]
