--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "aiosqlite>=0.21.0",
     "email-validator>=2.3.0",
     "fastapi>=0.124.0",
+    "httpx>=0.28.1",
     "passlib>=1.7.4",
     "pydantic-settings>=2.12.0",
     "python-jose[cryptography]>=3.5.0",
