--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiosqlite>=0.21.0",
+    "asyncpg>=0.31.0",
     "email-validator>=2.3.0",
     "fastapi>=0.124.0",
     "httpx>=0.28.1",
