--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "passlib>=1.7.4",
     "pydantic-settings>=2.12.0",
     "python-jose[cryptography]>=3.5.0",
+    "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.45",
     "uvicorn[standard]>=0.38.0",
 ]
