--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,10 @@ dependencies = [
     "email-validator>=2.3.0",
     "fastapi>=0.124.0",
     "httpx>=0.28.1",
+    "langchain[openai]>=1.2.0",
     "passlib>=1.7.4",
     "pydantic-settings>=2.12.0",
+    "pypdf>=6.4.2",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.45",
