--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,12 +11,14 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiosqlite>=0.21.0",
+    "alembic>=1.17.2",
     "asyncpg>=0.31.0",
     "email-validator>=2.3.0",
     "fastapi>=0.124.0",
     "httpx>=0.28.1",
     "langchain[openai]>=1.2.0",
     "passlib>=1.7.4",
+    "pgvector>=0.4.2",
     "pydantic-settings>=2.12.0",
     "pypdf>=6.4.2",
     "python-jose[cryptography]>=3.5.0",
@@ -27,16 +29,18 @@ dependencies = [
 
 
 
+
 [project.optional-dependencies]
 ui = [
-  "streamlit>=1.38",
-  "pandas-stubs>=2.2",
+    "streamlit>=1.38",
+    "pandas-stubs>=2.2",
 ]
 
 dev = [
-  "pytest>=8",
-  "pytest-asyncio>=0.23",
-  "mypy>=1.10",
+    "pytest>=8",
+    "pytest-asyncio>=0.23",
+    "mypy>=1.10",
+    "psycopg2"
 ]
 
 
