--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.45",
+    "tiktoken>=0.5.0",
     "uvicorn[standard]>=0.38.0",
 ]
 
