--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,17 +26,14 @@ dependencies = [
     "sqlalchemy>=2.0.45",
     "tiktoken>=0.5.0",
     "uvicorn[standard]>=0.38.0",
+    "streamlit>=1.38",
+    "pandas-stubs>=2.2"
 ]
 
 
 
 
 [project.optional-dependencies]
-ui = [
-    "streamlit>=1.38",
-    "pandas-stubs>=2.2",
-]
-
 dev = [
     "pytest>=8",
     "pytest-asyncio>=0.23",
